--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "ci": "CI=true yarn test --coverage",
     "lint": "eslint --ext js,ts,tsx src"
   },
   "eslintConfig": {
