--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.1.4",
+    "@types/react-router-dom": "^5.1.3",
+    "history": "^4.10.1",
+    "oidc-client": "^1.10.1",
     "prop-types": "^15.7.2",
     "ra-data-fakerest": "^3.0.1",
     "react": "^16.12.0",
     "react-admin": "^3.2.1",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "redux-oidc": "^4.0.0-beta1",
     "typescript": "~3.7.2"
   },
   "scripts": {
