--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "oidc-client": "^1.10.1",
     "prop-types": "^15.7.2",
     "ra-data-fakerest": "^3.0.1",
+    "ra-language-english": "^3.2.0",
+    "ra-language-finnish": "^3.2.0",
+    "ra-language-swedish": "^1.0.0",
     "react": "^16.12.0",
     "react-admin": "^3.2.1",
     "react-dom": "^16.12.0",
