--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
     "graphql": "^14.6.0",
+    "hds-react": "^0.5.5",
     "history": "^4.10.1",
     "oidc-client": "^1.10.1",
     "prop-types": "^15.7.2",
