--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-REACT_APP_OIDC_AUTHORITY=
+REACT_APP_OIDC_AUTHORITY="https://api.hel.fi/sso/openid/"
 REACT_APP_PROFILE_AUDIENCE="https://api.hel.fi/auth/helsinkiprofile"
 REACT_APP_OIDC_CLIENT_ID="https://api.hel.fi/auth/jassari-admin-ui"
 REACT_APP_OIDC_SCOPE="openid profile $REACT_APP_PROFILE_AUDIENCE"
