--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -16,6 +17,7 @@
     "@types/react-router-dom": "^5.1.3",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "date-fns": "^2.10.0",
     "graphql": "^14.6.0",
     "hds-react": "^0.5.5",
