--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^14.6.0",
     "hds-react": "^0.5.5",
     "history": "^4.10.1",
+    "i18n-iso-countries": "^5.3.0",
     "oidc-client": "^1.10.1",
     "prop-types": "^15.7.2",
     "ra-language-english": "^3.2.0",
