--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youth-membership-admin-ui",
-  "version": "0.1.0",
+  "version": "1.0.0-rc.1",
   "private": true,
   "dependencies": {
     "@sentry/browser": "^5.14.2",
