--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ REACT_APP_APPLICATION_NAME=$npm_package_name
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_OIDC_AUTHORITY="https://api.hel.fi/sso/openid/"
 REACT_APP_PROFILE_AUDIENCE="https://api.hel.fi/auth/helsinkiprofile"
-REACT_APP_OIDC_CLIENT_ID="https://api.hel.fi/auth/jassari-admin-ui"
+REACT_APP_OIDC_CLIENT_ID="https://api.hel.fi/auth/jassari"
 REACT_APP_OIDC_SCOPE="openid profile $REACT_APP_PROFILE_AUDIENCE"
 REACT_APP_PROFILE_GRAPHQL=
 REACT_APP_SENTRY_DSN="https://13e1b97fb11c4d10976a27675061c6c3@sentry.hel.ninja/60"
