--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/validator": "^13.1.0",
     "apollo-boost": "^0.4.9",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
@@ -38,7 +39,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux-oidc": "^4.0.0-beta1",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
