--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ build-review:
     DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: "https://api.hel.fi/sso-test/"
     DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: "https://api.hel.fi/auth/jassari-admin-ui"
     DOCKER_BUILD_ARG_REACT_APP_PROFILE_GRAPHQL: "https://profiili-api.test.kuva.hel.ninja/graphql/"
+    DOCKER_BUILD_ARG_REACT_APP_BASE_URL: "https://jassari-admin.test.kuva.hel.ninja/"
   only:
     refs:
       - external_pull_requests
@@ -27,6 +28,7 @@ build-staging:
     DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: "https://api.hel.fi/sso-test/"
     DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: "https://api.hel.fi/auth/jassari-admin-ui"
     DOCKER_BUILD_ARG_REACT_APP_PROFILE_GRAPHQL: "https://profiili-api.test.kuva.hel.ninja/graphql/"
+    DOCKER_BUILD_ARG_REACT_APP_BASE_URL: "https://jassari-admin.test.kuva.hel.ninja/"
   only:
     refs:
       - develop
@@ -39,6 +41,7 @@ build-production:
     DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: "https://api.hel.fi/sso/"
     DOCKER_BUILD_ARG_REACT_APP_PROFILE_GRAPHQL: "https://api.hel.fi/profiili/graphql/"
     DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: "https://id.hel.fi/auth/clients/jassariui-prod"
+    DOCKER_BUILD_ARG_REACT_APP_BASE_URL: "https://jassari-admin.hel.fi/"
   only:
     refs:
       - master
