Update react-admin 3.6.1 → 3.8.4
This resolves a race condition in the react-admin library which caused
an error to be thrown in our applicaiton.

ref: https://github.com/marmelab/react-admin/pull/4990

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ra-language-finnish": "^3.6.0",
     "ra-language-swedish": "^1.0.0",
     "react": "^16.13.1",
-    "react-admin": "^3.6.1",
+    "react-admin": "3.8.4",
     "react-dom": "^16.13.1",
     "react-final-form-arrays": "^3.1.1",
     "react-router-dom": "^5.2.0",
