--- a/.env
+++ b/.env
@@ -3,9 +3,10 @@ REACT_APP_APPLICATION_NAME=$npm_package_name
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_OIDC_AUTHORITY=https://api.hel.fi/sso-test/
 REACT_APP_PROFILE_AUDIENCE=https://api.hel.fi/auth/helsinkiprofile
+REACT_APP_JASSARI_AUDIENCE=https://api.hel.fi/auth/jassariapi
 REACT_APP_OIDC_CLIENT_ID=https://api.hel.fi/auth/jassari-admin-ui
-REACT_APP_OIDC_SCOPE="openid profile $REACT_APP_PROFILE_AUDIENCE"
-REACT_APP_PROFILE_GRAPHQL=https://profiili-api.test.kuva.hel.ninja/graphql/
+REACT_APP_OIDC_SCOPE="openid $REACT_APP_JASSARI_AUDIENCE $REACT_APP_PROFILE_AUDIENCE"
+REACT_APP_JASSARI_FEDERATION_GRAPHQL=https://jassari-federation.test.kuva.hel.ninja/
 REACT_APP_SENTRY_DSN=https://13e1b97fb11c4d10976a27675061c6c3@sentry.hel.ninja/60
 REACT_APP_BASE_URL=http://localhost:3001/
 
