--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build-review:
     DOCKER_BUILD_ARG_REACT_APP_ENVIRONMENT: 'review'
     DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: "https://api.hel.fi/sso-test/"
     DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: "https://api.hel.fi/auth/jassari-admin-ui"
-    DOCKER_BUILD_ARG_REACT_APP_PROFILE_GRAPHQL: "https://profiili-api.test.kuva.hel.ninja/graphql/"
+    REACT_APP_JASSARI_FEDERATION_GRAPHQL: "https://jassari-federation.test.kuva.hel.ninja/"
     DOCKER_BUILD_ARG_REACT_APP_BASE_URL: "https://jassari-admin.test.kuva.hel.ninja/"
   only:
     refs:
@@ -27,7 +27,7 @@ build-staging:
     DOCKER_BUILD_ARG_REACT_APP_ENVIRONMENT: 'staging'
     DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: "https://api.hel.fi/sso-test/"
     DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: "https://api.hel.fi/auth/jassari-admin-ui"
-    DOCKER_BUILD_ARG_REACT_APP_PROFILE_GRAPHQL: "https://profiili-api.test.kuva.hel.ninja/graphql/"
+    REACT_APP_JASSARI_FEDERATION_GRAPHQL: "https://jassari-federation.test.kuva.hel.ninja/"
     DOCKER_BUILD_ARG_REACT_APP_BASE_URL: "https://jassari-admin.test.kuva.hel.ninja/"
   only:
     refs:
@@ -39,7 +39,7 @@ build-production:
     DOCKER_IMAGE_NAME: '$CI_PROJECT_NAME-production'
     DOCKER_BUILD_ARG_REACT_APP_ENVIRONMENT: 'production'
     DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: "https://api.hel.fi/sso/"
-    DOCKER_BUILD_ARG_REACT_APP_PROFILE_GRAPHQL: "https://api.hel.fi/profiili/graphql/"
+    REACT_APP_JASSARI_FEDERATION_GRAPHQL: "unknown"
     DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: "https://id.hel.fi/auth/clients/jassari-admin-prod"
     DOCKER_BUILD_ARG_REACT_APP_BASE_URL: "https://jassari-admin.hel.fi/"
   only:
