--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "react-final-form-arrays": "^3.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux-oidc": "^4.0.0-beta1",
     "typescript": "~3.9.5",
     "validator": "^13.1.1"
   },
@@ -71,6 +70,7 @@
     "apollo": "^2.28.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest-localstorage-mock": "^2.4.3",
     "prettier": "^2.0.5",
     "testcafe": "^1.9.2"
   }
