Fix profile editing
Profile editing should now work with the federated API.

--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ BROWSER_TESTING_URL=
 BROWSER_TESTING_USERNAME=
 BROWSER_TESTING_USERNAME_NO_ACCESS=
 BROWSER_TESTING_PASSWORD=
+BROWSER_TESTING_EXISTING_USER_YOUTH_PROFILE_ID=
+BROWSER_TESTING_EXISTING_USER_FIRST_NAME=
+BROWSER_TESTING_EXISTING_USER_LAST_NAME=
