Fix profile editing
Profile editing should now work with the federated API.

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ REACT_APP_BASE_URL=http://localhost:3001/
 REACT_APP_TESTING_USERNAME=
 REACT_APP_TESTING_USERNAME_NO_ACCESS=
 REACT_APP_TESTING_PASSWORD=
+REACT_APP_TESTING_EXISTING_USER_YOUTH_PROFILE_ID=
+REACT_APP_TESTING_EXISTING_USER_FIRST_NAME=
+REACT_APP_TESTING_EXISTING_USER_LAST_NAME=
