Remove .env file from version control
The file could possibly contain secrets that could easily be leaked by
accident.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ yarn-error.log*
 
 # browser test screenshots on error
 screenshots
+
+# do not store env in version control in order to avoid leaking secrets
+.env
+.env.development
+.env.test
+.env.production
