Use GitHub actions instead of Travis

--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ REACT_APP_OIDC_SCOPE="openid profile $REACT_APP_PROFILE_AUDIENCE"
 REACT_APP_PROFILE_GRAPHQL=https://profiili-api.test.kuva.hel.ninja/graphql/
 REACT_APP_SENTRY_DSN=https://13e1b97fb11c4d10976a27675061c6c3@sentry.hel.ninja/60
 REACT_APP_BASE_URL=http://localhost:3001/
-REACT_APP_TESTING_USERNAME=
-REACT_APP_TESTING_USERNAME_NO_ACCESS=
-REACT_APP_TESTING_PASSWORD=
+
+BROWSER_TESTING_URL=
+BROWSER_TESTING_USERNAME=
+BROWSER_TESTING_USERNAME_NO_ACCESS=
+BROWSER_TESTING_PASSWORD=
