Integrate federated browser tests with GitHub

--- a/.github/workflows/browser-test.yml
+++ b/.github/workflows/browser-test.yml
@@ -38,3 +38,6 @@ jobs:
         BROWSER_TESTING_USERNAME: ${{ secrets.BROWSER_TESTING_USERNAME }}
         BROWSER_TESTING_USERNAME_NO_ACCESS: ${{ secrets.BROWSER_TESTING_USERNAME_NO_ACCESS }}
         BROWSER_TESTING_PASSWORD: ${{ secrets.BROWSER_TESTING_PASSWORD }}
+        BROWSER_TESTING_EXISTING_USER_YOUTH_PROFILE_ID: ${{ secrets.BROWSER_TESTING_EXISTING_USER_YOUTH_PROFILE_ID }}
+        BROWSER_TESTING_EXISTING_USER_FIRST_NAME: ${{ secrets.BROWSER_TESTING_EXISTING_USER_FIRST_NAME }}
+        BROWSER_TESTING_EXISTING_USER_LAST_NAME: ${{ secrets.BROWSER_TESTING_EXISTING_USER_LAST_NAME }}
