--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -19,19 +19,21 @@ jobs:
     name: Build
     steps:
       - uses: actions/checkout@v2
+      - uses: andersinno/kolga-setup-action@v2
+
       - name: Build
         uses: andersinno/kolga-build-action@v2
         env:
           DOCKER_IMAGE_NAME: ${{ env.REPO_NAME }}-review
           DOCKER_BUILD_ARG_REACT_APP_ENVIRONMENT: 'review'
-          DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: 'https://api.hel.fi/sso-test/'
+          DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: 'https://tunnistamo.${{ env.BASE_DOMAIN }}/'
           DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
           DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
-          DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: 'https://api.hel.fi/auth/jassari-admin-ui'
+          DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: ${{ env.K8S_NAMESPACE }}
           DOCKER_BUILD_ARG_REACT_APP_OIDC_SCOPE: 'openid $DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE $DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE'
-          DOCKER_BUILD_ARG_REACT_APP_JASSARI_FEDERATION_GRAPHQL: 'https://jassari-federation.test.kuva.hel.ninja/'
+          DOCKER_BUILD_ARG_REACT_APP_JASSARI_FEDERATION_GRAPHQL: 'https://jassari-federation.${{ env.BASE_DOMAIN }}/'
           DOCKER_BUILD_ARG_REACT_APP_SENTRY_DSN: 'https://13e1b97fb11c4d10976a27675061c6c3@sentry.hel.ninja/60'
-          DOCKER_BUILD_ARG_REACT_APP_BASE_URL: 'https://jassari-admin.test.kuva.hel.ninja/'
+          DOCKER_BUILD_ARG_REACT_APP_BASE_URL: 'https://jassari-admin.${{ env.BASE_DOMAIN }}/'
 
   review:
     runs-on: ubuntu-latest
@@ -46,3 +48,17 @@ jobs:
         env:
           ENVIRONMENT_URL: https://${{ env.K8S_NAMESPACE }}.${{ env.BASE_DOMAIN }}
           DOCKER_IMAGE_NAME: ${{ env.REPO_NAME }}-review
+
+      - name: Setup Tunnistamo
+        uses: City-of-Helsinki/setup-tunnistamo-action@main
+        with:
+          kubeconfig_raw: ${{ env.KUBECONFIG_RAW}}
+          review_namespace: ${{ env.K8S_NAMESPACE }}
+          api_scope: https://api.hel.fi/auth/helsinkiprofile
+
+      - name: Setup Tunnistamo
+        uses: City-of-Helsinki/setup-tunnistamo-action@main
+        with:
+          kubeconfig_raw: ${{ env.KUBECONFIG_RAW}}
+          review_namespace: ${{ env.K8S_NAMESPACE }}
+          api_scope: https://api.hel.fi/auth/jassariapi
