--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -13,6 +13,7 @@ env:
   KUBECONFIG_RAW: ${{ secrets.KUBECONFIG_RAW_STAGING }}
   BUILD_ARTIFACT_FOLDER: 'build_artifacts'
   SERVICE_ARTIFACT_FOLDER: 'service_artifacts'
+  BASE_DOMAIN: ${{ secrets.BASE_DOMAIN_STAGING }}
   SERVICE_PORT: 80
 
 jobs:
@@ -31,9 +32,9 @@ jobs:
           DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
           DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: 'https://api.hel.fi/auth/jassari-admin-ui'
           DOCKER_BUILD_ARG_REACT_APP_OIDC_SCOPE: 'openid $DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE $DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE'
-          DOCKER_BUILD_ARG_REACT_APP_JASSARI_FEDERATION_GRAPHQL: 'https://jassari-federation.test.kuva.hel.ninja/'
+          DOCKER_BUILD_ARG_REACT_APP_JASSARI_FEDERATION_GRAPHQL: 'https://jassari-federation.${{ env.BASE_DOMAIN }}/'
           DOCKER_BUILD_ARG_REACT_APP_SENTRY_DSN: 'https://13e1b97fb11c4d10976a27675061c6c3@sentry.hel.ninja/60'
-          DOCKER_BUILD_ARG_REACT_APP_BASE_URL: 'https://jassari-admin.test.kuva.hel.ninja/'
+          DOCKER_BUILD_ARG_REACT_APP_BASE_URL: 'https://jassari-admin.${{ env.BASE_DOMAIN }}/'
 
   staging:
     runs-on: ubuntu-latest
