--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/validator": "^13.1.0",
     "apollo-boost": "^0.4.9",
-    "axios": "^0.19.2",
+    "axios": "0.21.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
     "final-form-arrays": "^3.0.2",
@@ -37,7 +37,7 @@
     "react-dom": "^16.13.1",
     "react-final-form-arrays": "^3.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.4",
     "typescript": "~3.9.5",
     "validator": "^13.1.1"
   },
