--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           DOCKER_IMAGE_NAME: ${{ env.REPO_NAME }}-staging
           DOCKER_BUILD_ARG_REACT_APP_ENVIRONMENT: 'staging'
-          DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: 'https://api.hel.fi/sso-test/'
+          DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: 'https://tunnistamo.${{ env.BASE_DOMAIN }}/'
           DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
           DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
           DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: 'https://api.hel.fi/auth/jassari-admin-ui'
