--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=3001
-REACT_APP_OIDC_AUTHORITY=https://api.hel.fi/sso-test/
+REACT_APP_OIDC_AUTHORITY=https://tunnistamo.test.kuva.hel.ninja
 REACT_APP_PROFILE_AUDIENCE=https://api.hel.fi/auth/helsinkiprofile
 REACT_APP_JASSARI_AUDIENCE=https://api.hel.fi/auth/jassariapi
 REACT_APP_OIDC_CLIENT_ID=https://api.hel.fi/auth/jassari-admin-ui
