--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -16,6 +16,8 @@ env:
   BUILD_ARTIFACT_FOLDER: 'build_artifacts'
   SERVICE_ARTIFACT_FOLDER: 'service_artifacts'
   SERVICE_PORT: 80
+  PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
+  JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
 
 jobs:
   build:
@@ -30,10 +32,10 @@ jobs:
           DOCKER_IMAGE_NAME: ${{ env.REPO_NAME }}-production
           DOCKER_BUILD_ARG_REACT_APP_ENVIRONMENT: 'production'
           DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: 'https://api.hel.fi/sso/'
-          DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
-          DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
+          DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE: ${{ env.PROFILE_AUDIENCE }}
+          DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE: ${{ env.JASSARI_AUDIENCE }}
           DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: 'https://id.hel.fi/auth/clients/jassari-admin-prod'
-          DOCKER_BUILD_ARG_REACT_APP_OIDC_SCOPE: 'openid $DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE $DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE'
+          DOCKER_BUILD_ARG_REACT_APP_OIDC_SCOPE: 'openid ${{ env.PROFILE_AUDIENCE }} ${{ env.JASSARI_AUDIENCE }}'
           DOCKER_BUILD_ARG_REACT_APP_JASSARI_FEDERATION_GRAPHQL: 'https://jassari.api.hel.fi'
           DOCKER_BUILD_ARG_REACT_APP_SENTRY_DSN: 'https://13e1b97fb11c4d10976a27675061c6c3@sentry.hel.ninja/60'
           DOCKER_BUILD_ARG_REACT_APP_BASE_URL: 'https://jassari-admin.hel.fi/'
