--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -12,6 +12,8 @@ env:
   SERVICE_ARTIFACT_FOLDER: 'service_artifacts'
   BASE_DOMAIN: ${{ secrets.BASE_DOMAIN_STAGING }}
   SERVICE_PORT: 80
+  PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
+  JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
 
 jobs:
   build:
@@ -27,10 +29,10 @@ jobs:
           DOCKER_IMAGE_NAME: ${{ env.REPO_NAME }}-review
           DOCKER_BUILD_ARG_REACT_APP_ENVIRONMENT: 'review'
           DOCKER_BUILD_ARG_REACT_APP_OIDC_AUTHORITY: 'https://tunnistamo.${{ env.BASE_DOMAIN }}/'
-          DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
-          DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
+          DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE: ${{ env.PROFILE_AUDIENCE }}
+          DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE: ${{ env.JASSARI_AUDIENCE }}
           DOCKER_BUILD_ARG_REACT_APP_OIDC_CLIENT_ID: ${{ env.K8S_NAMESPACE }}
-          DOCKER_BUILD_ARG_REACT_APP_OIDC_SCOPE: 'openid $DOCKER_BUILD_ARG_REACT_APP_JASSARI_AUDIENCE $DOCKER_BUILD_ARG_REACT_APP_PROFILE_AUDIENCE'
+          DOCKER_BUILD_ARG_REACT_APP_OIDC_SCOPE: 'openid ${{ env.PROFILE_AUDIENCE }} ${{ env.JASSARI_AUDIENCE }}'
           DOCKER_BUILD_ARG_REACT_APP_JASSARI_FEDERATION_GRAPHQL: 'https://jassari-federation.${{ env.BASE_DOMAIN }}/'
           DOCKER_BUILD_ARG_REACT_APP_SENTRY_DSN: 'https://13e1b97fb11c4d10976a27675061c6c3@sentry.hel.ninja/60'
           DOCKER_BUILD_ARG_REACT_APP_BASE_URL: 'https://jassari-admin.${{ env.BASE_DOMAIN }}/'
