--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -14,6 +14,10 @@ env:
   SERVICE_PORT: 80
   PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
   JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
+  K8S_REQUEST_CPU: 1m
+  K8S_REQUEST_RAM: 10Mi
+  K8S_LIMIT_CPU: 5m
+  K8S_LIMIT_RAM: 20Mi
 
 jobs:
   build:
