--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,7 +17,7 @@ env:
   SERVICE_ARTIFACT_FOLDER: 'service_artifacts'
   SERVICE_PORT: 80
   PROFILE_AUDIENCE: 'https://api.hel.fi/auth/helsinkiprofile'
-  JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapi'
+  JASSARI_AUDIENCE: 'https://api.hel.fi/auth/jassariapiprod'
   K8S_REQUEST_CPU: 1m
   K8S_REQUEST_RAM: 10Mi
   K8S_LIMIT_CPU: 5m
