--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "lint": "eslint --ext js,ts,tsx src",
     "codegen": "apollo client:codegen --target=typescript --no-addTypename --outputFlat src/graphql/generatedTypes.ts --useReadOnlyTypes --endpoint=https://jassari-federation.test.kuva.hel.ninja/graphql",
     "browser-test": "testcafe \"chrome --window-size='1920,1080'\" browser-tests/ --live",
-    "browser-test:ci": "testcafe \"chrome:headless --disable-gpu --window-size='1920,1080'\" browser-tests/ -s takeOnFails=true"
+    "browser-test:ci": "testcafe \"chrome:headless --disable-gpu --window-size='1920,1080'\" browser-tests/ -s takeOnFails=true --video screenshots",
+    "browser-test:wsl2win": "testcafe 'path:`/mnt/c/Program Files/Google/Chrome/Application/chrome.exe`' browser-tests/ --live --dev"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -73,6 +74,7 @@
     "resetMocks": false
   },
   "devDependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "apollo": "^2.28.3",
     "jest-localstorage-mock": "^2.4.3",
     "testcafe": "^1.9.2"
