build: azure pipelines for release-please

--- a/azure-pipelines-review.yml
+++ b/azure-pipelines-review.yml
@@ -21,6 +21,11 @@ pr:
   branches:
     include:
     - master
+  paths:
+    exclude:
+    - '*release-please*'
+    - '**/*.md'
+    - '.github/'
 
 # By default, use self-hosted agents
 pool: Default
