--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -7,7 +7,7 @@ trigger:
   batch: true
   tags:
     include:
-      - release-*
+      - youth-membership-admin-ui-v*
   paths:
     exclude:
     - README.md
