--- a/azure-pipelines-review.yml
+++ b/azure-pipelines-review.yml
@@ -35,6 +35,7 @@ resources:
   # Azure DevOps repository
   - repository: youth-membership-pipelines
     type: git
+    ref: refs/heads/review_tunnistamo
     # Azure DevOps project/repository
     name: youth-membership/youth-membership-pipelines
 
